--- a/Parser_in_compilers.ipynb
+++ b/Parser_in_compilers.ipynb
@@ -148,11 +148,11 @@
         "        \"\"\"\n",
         "        statement ::= <id> <op => expr\n",
         "        \"\"\"\n",
-        "\n",
+        "        #Aqui é verificado se as operações fonecidadas pelo usuário\n",
+        "        #não contem erro de sintaxe\n",
         "        self.use(T_ID);\n",
         "        self.use(T_OP);\n",
         "        self.expr();\n",
-        "        # TODO implementar o que é uma atribuição\n",
         "        pass\n",
         "\n",
         "\n",
